<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:columnCount="6"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="8"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:text="@string/back" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="4"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:text="@string/div" />

    <Button
        android:id="@+id/button1"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:text="@string/n" />

    <Button
        android:id="@+id/button7"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/seven" />

    <Button
        android:id="@+id/button8"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="2"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/eight" />

    <Button
        android:id="@+id/button9"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/nine" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="4"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/mult" />

    <Button
        android:id="@+id/button4"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:text="@string/four" />

    <Button
        android:id="@+id/button5"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="2"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:text="@string/five" />

    <Button
        android:id="@+id/button6"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:text="@string/sex" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="4"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:text="@string/min" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/c" />

    <Button
        android:id="@+id/button1"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="2"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/mc" />

    <Button
        android:id="@+id/button1"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/mr" />

    <Button
        android:id="@+id/button1"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="4"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/m" />

    <Button
        android:id="@+id/button1"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="6"
        android:text="@string/one" />

    <Button
        android:id="@+id/button2"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="6"
        android:text="@string/two" />

    <Button
        android:id="@+id/button3"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="3"
        android:layout_gravity="left|center_vertical"
        android:layout_row="6"
        android:text="@string/three" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="4"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:text="@string/plus" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="4"
        android:layout_gravity="left|top"
        android:layout_row="7"
        android:text="@string/equal" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:layout_column="3"
        android:layout_gravity="left|center_vertical"
        android:layout_row="7"
        android:text="@string/dot" />

    <Button
        android:id="@+id/button0"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="right|top"
        android:layout_row="7"
        android:text="@string/zero" />

    <EditText
        android:id="@+id/editDisplay"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:ems="10" >

        <requestFocus />
    </EditText>

</GridLayout>